--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/client": "^6.9.1",
     "@sanity/image-url": "^1.0.2",
     "@stripe/stripe-js": "^2.1.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.289.0",
-    "next": "^13.5.6",
+    "next": "^14.0.3",
     "next-sanity": "^6.0.5",
+    "next-sanity-image": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.2.0",
