--- a/package.json
+++ b/package.json
@@ -17,20 +17,29 @@
     "@sanity/client": "^6.9.1",
     "@sanity/image-url": "^1.0.2",
     "@stripe/stripe-js": "^2.1.10",
+    "@tanstack/react-query": "^5.17.19",
+    "@upstash/ratelimit": "^1.0.0",
+    "@upstash/redis": "^1.28.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "eventsource-parser": "^1.1.1",
     "lucide-react": "^0.289.0",
+    "nanoid": "^5.0.4",
     "next": "^14.0.3",
     "next-sanity": "^6.0.5",
     "next-sanity-image": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-textarea-autosize": "^8.5.3",
     "stripe": "^14.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-shopping-cart": "^3.1.8"
+    "use-shopping-cart": "^3.1.8",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
